Add link open-source code

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
     </section>
     <!-- footer -->
     <p class="source">
-      <a href="" target="_blank">Open-source code</a>,
+      <a
+        href="https://github.com/DianaRomaniuk/di-weather-app.git"
+        target="_blank"
+        >Open-source code</a
+      >,
       <span class="authorsname">by Diana Romaniuk</span>
     </p>
     <script src="src/index.js"></script>
