--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-6 col-md today-weather-item test-second">
                   <!-- IMG TO CHANGE -->
                   <img
-                    src="http://openweathermap.org/img/wn/01d@2x.png"
+                    src="https://openweathermap.org/img/wn/01d@2x.png"
                     alt="main-icon"
                     class="main-icon"
                     id="main-icon"
